src/objects/MUSW__RM_Custom_Buttons__mdt.object
<CustomObject>
    <description>Customized url buttons on the record manage page.</description>
    <fields>
        <fullName>MUSW__Button_Action__c</fullName>
        <inlineHelpText>A relative URL path.</inlineHelpText>
        <label>Button Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Button_Label__c</fullName>
        <inlineHelpText>Text on the button that the end user will see.</inlineHelpText>
        <label>Button Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Profile_Permissions__c</fullName>
        <description>If not provided, all profiles will see this button. To restrict to specific profiles, admin user can provide a comma-separated list of profile names that will have access to this action button.</description>
        <inlineHelpText>If not provided, all profiles will see this button. To restrict to specific profiles, admin user can provide a comma-separated list of profile names that will have access to this action button.</inlineHelpText>
        <label>Profile Permissions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Record_Manage_Setting__c</fullName>
        <label>Record Manage Setting</label>
        <referenceTo>MUSW__Record_Manage_Setting__mdt</referenceTo>
        <relationshipName>Record_Manage_Custom_Buttons</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Record Manage Custom Action</label>
    <pluralLabel>Record Manage Custom Actions</pluralLabel>
</CustomObject>